--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_sign_in.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
-    tools:context=".SignInandRegistrationActivity">
+    tools:context=".register.SignInActivity">
 
 
     <ImageView
@@ -52,7 +52,7 @@
             android:textColor="?attr/splashTextColor"
             android:textSize="30sp" />
     </LinearLayout>
-    
+
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/enter_mail_et"
         android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
         android:gravity="center"
         android:textColorHint="?attr/splashTextColor"
         android:textColor="?attr/splashTextColor"
-        android:layout_marginTop="90dp"/>
+        android:layout_marginTop="60dp"/>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/enter_password_et"
@@ -85,12 +85,13 @@
         android:textColor="?attr/splashTextColor"
         android:layout_marginTop="10dp"/>
 
+
     <Button
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/enter_password_et"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/enter_password_et"
         android:layout_marginTop="50dp"
         android:text="@string/login_btn_txt"
         app:backgroundTint="@color/red"
