--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values-night/themes.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,7 @@
 <resources>
     <style name="Base.Theme.BlogApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="splashTextColor">@color/splash_text_color_light</item>
+        <item name="android:statusBarColor">@color/blue</item>"
     </style>
     <style name="Theme.BlogApp" parent="Base.Theme.BlogApp" />
 </resources>
