--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/themes.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.BlogApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="splashTextColor">@color/splash_text_color_dark</item>
+        <item name="android:statusBarColor">@color/blue</item>"
     </style>
     <style name="Theme.BlogApp" parent="Base.Theme.BlogApp" />
 </resources>
