--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,14 +7,77 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.1"
+        android:contentDescription="@string/welcomescreenbackground"
+        android:scaleType="centerCrop"
+        android:src="@drawable/rectangle_background" />
+
     <TextView
+        android:id="@+id/new_feeds_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_thin"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/new_feeds_tv"
+        android:fontFamily="@font/montserrat_thin_2"
+        android:textStyle="bold"
+        android:textColor="@color/splash_text_color_dark"
+        android:layout_marginStart="33dp"
+        android:textSize="17sp"
+        android:layout_marginTop="18dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/userProfileCv"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="12dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="32dp"
+        app:cardCornerRadius="100dp"
+        android:background="@drawable/rectangle_background">
+
+        <ImageView
+            android:id="@+id/profileIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/profile1"
+            android:scaleType="centerCrop"/>
+    </androidx.cardview.widget.CardView>
+    
+    <ImageView
+        android:id="@+id/save_article_btn"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:contentDescription="@string/save_article_btn"
+        android:src="@drawable/post_icon_red"
+        android:layout_toStartOf="@id/userProfileCv"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="16dp"/>
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_blog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/new_feeds_tv"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="33dp"
+        app:queryHint="@string/search_view_hint_text"
+        app:iconifiedByDefault="false"
+        android:background="@drawable/search_view_bg"
+        app:searchIcon="@drawable/search"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="33dp"
+        android:layout_below="@id/search_blog"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="" />
+
+
+</RelativeLayout>
