--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,13 +19,13 @@
         android:id="@+id/new_feeds_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/new_feeds_tv"
-        android:fontFamily="@font/montserrat_thin_2"
-        android:textStyle="bold"
-        android:textColor="@color/splash_text_color_dark"
         android:layout_marginStart="33dp"
+        android:layout_marginTop="18dp"
+        android:fontFamily="@font/montserrat_semibold"
+        android:text="@string/new_feeds_tv"
+        android:textColor="?attr/splashTextColor"
         android:textSize="17sp"
-        android:layout_marginTop="18dp"/>
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/userProfileCv"
@@ -36,7 +35,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="32dp"
         app:cardCornerRadius="100dp"
-        android:background="@drawable/rectangle_background">
+        app:cardBackgroundColor="@android:color/transparent">
 
         <ImageView
             android:id="@+id/profileIv"
@@ -45,7 +44,7 @@
             android:src="@drawable/profile1"
             android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
-    
+
     <ImageView
         android:id="@+id/save_article_btn"
         android:layout_width="24dp"
@@ -77,7 +76,6 @@
         android:layout_marginEnd="33dp"
         android:layout_below="@id/search_blog"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="" />
-
+        tools:listitem="@layout/blog_items" />
 
 </RelativeLayout>
