Home screen is now little bit left set recycler view in XML now I start working on Adapter

--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/colors.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_white">#EFEFEF</color>
     <color name="splash_text_color_dark">#000000</color>
     <color name="splash_text_color_light">#FFFFFF</color>
+    <color name="date_color">#C8C8C8</color>
 </resources>
