--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/blog_items.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/blog_items.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="264dp"
+    android:layout_height="280dp"
     app:cardElevation="5dp"
+    android:layout_marginBottom="20dp"
     app:cardCornerRadius="9dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp">
 
         <TextView
             android:id="@+id/blog_heading_text"
-            android:layout_width="250dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:textSize="16sp"
@@ -43,7 +46,8 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:layout_width="70dp"
+            android:id="@+id/blogger_name_tv"
+            android:layout_width="90dp"
             android:layout_height="44dp"
             android:layout_alignParentEnd="true"
             android:textSize="12sp"
@@ -51,12 +55,106 @@
             android:layout_marginEnd="9dp"
             android:layout_toEndOf="@id/blogUserProfileCv"
             android:textColor="?attr/splashTextColor"
-            android:fontFamily="@font/montserrat_semibold"
+            android:fontFamily="@font/montserrat_light"
             android:text="@string/blogger_name_tv"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:gravity="center"
-            android:padding="5dp"
             android:ellipsize="end"
             android:maxLines="2"/>
+
+        <TextView
+            android:id="@+id/date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/date_tv"
+            android:textColor="@color/date_color"
+            android:fontFamily="@font/montserrat_mediumitalic"
+            android:layout_below="@+id/blogger_name_tv"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="9dp"/>
+        
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/blog_divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/date_tv"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginEnd="9dp"
+            app:dividerColor="@color/date_color"/>
+        
+        <TextView
+            android:id="@+id/blog_column_tv"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="14dp"
+            android:maxLines="4"
+            android:layout_below="@+id/blog_divider"
+            android:layout_marginStart="9dp"
+            android:layout_marginEnd="9dp"
+            android:letterSpacing="0.03"
+            android:lineHeight="22sp"
+            android:ellipsize="end"
+            android:text="@string/blog_column_tv"
+            android:textSize="12sp"
+            android:fontFamily="@font/montserrat_light"
+            android:paddingTop="5dp"
+            android:textColor="?attr/splashTextColor"
+            tools:ignore="UnusedAttribute" />
+
+        <Button
+            android:id="@+id/blog_post_btn"
+            android:layout_width="160dp"
+            android:layout_height="48dp"
+            android:layout_below="@id/blog_column_tv"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_background_stroke_blue"
+            android:elevation="10dp"
+            android:fontFamily="@font/montserrat_light"
+            android:text="@string/blog_post_btn_readmore"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/blue" />
+
+        <ImageView
+            android:id="@+id/save_blog_btn"
+            android:layout_width="18dp"
+            android:layout_height="20dp"
+            android:contentDescription="@string/save_article_btn"
+            android:src="@drawable/post_icon_red"
+            android:layout_below="@id/blog_column_tv"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentBottom="true"/>
+
+        <ImageView
+            android:id="@+id/blog_like_click"
+            android:layout_width="20dp"
+            android:layout_height="18dp"
+            android:src="@drawable/like_black_icon"
+            android:layout_toStartOf="@id/save_blog_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="20dp"
+            app:tint="?attr/splashTextColor"
+            tools:ignore="ContentDescription" />
+        
+        <TextView
+            android:id="@+id/like_counts_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@id/blog_like_click"
+            android:text="@string/like_counts_tv"
+            android:textColor="?attr/splashTextColor"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:textStyle="bold"/>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
