Add adapter class and set the layouts

--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         app:searchIcon="@drawable/search"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/blogRecyclerView"
+        android:id="@+id/blog_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
