--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/blog_items.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/blog_items.xml
@@ -13,37 +13,57 @@
         android:layout_height="match_parent"
         android:layout_margin="5dp">
 
-        <TextView
-            android:id="@+id/blog_heading_text"
-            android:layout_width="230dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/barrierCl"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:textSize="16sp"
-            android:textColor="@color/blue"
-            android:layout_marginStart="9dp"
-            android:ellipsize="end"
-            android:layout_marginTop="13dp"
-            android:fontFamily="@font/montserrat_semibold"
-            android:textStyle="bold"
-            android:text="@string/blog_heading_txt"/>
+            android:layout_marginEnd="10dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/blogUserProfileCv"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_toEndOf="@id/blog_heading_text"
-            android:layout_marginTop="13dp"
-            android:layout_marginEnd="9dp"
-            app:cardCornerRadius="200dp">
+            <TextView
+                android:id="@+id/blog_heading_text"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:textSize="16sp"
+                android:textColor="@color/blue"
+                android:layout_marginStart="9dp"
+                android:ellipsize="end"
+                android:layout_marginTop="13dp"
+                android:fontFamily="@font/montserrat_semibold"
+                android:textStyle="bold"
+                android:text="@string/blog_heading_txt"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageView
-                android:id="@+id/profileIv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/blog_user_profile_image"
-                android:src="@drawable/profile1"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                app:barrierDirection="end"
+                app:constraint_referenced_ids="blog_heading_text" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/blogUserProfileCv"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:cardCornerRadius="200dp"
+                app:layout_constraintTop_toTopOf="@id/blog_heading_text"
+                app:layout_constraintStart_toEndOf="@id/barrier"
+                android:layout_marginTop="9dp"
+                android:layout_marginEnd="9dp">
+
+                <ImageView
+                    android:id="@+id/profileIv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/blog_user_profile_image"
+                    android:src="@drawable/profile1"
+                    android:scaleType="centerCrop"/>
+            </androidx.cardview.widget.CardView>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/blogger_name_tv"
@@ -53,7 +73,7 @@
             android:textSize="12sp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="9dp"
-            android:layout_toEndOf="@id/blogUserProfileCv"
+            android:layout_toEndOf="@id/barrierCl"
             android:textColor="?attr/splashTextColor"
             android:fontFamily="@font/montserrat_light"
             android:text="@string/blogger_name_tv"
@@ -73,7 +93,7 @@
             android:layout_below="@+id/blogger_name_tv"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="9dp"/>
-        
+
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/blog_divider"
             android:layout_width="match_parent"
@@ -83,7 +103,7 @@
             android:layout_marginStart="9dp"
             android:layout_marginEnd="9dp"
             app:dividerColor="@color/date_color"/>
-        
+
         <TextView
             android:id="@+id/blog_column_tv"
             android:layout_width="match_parent"
@@ -142,7 +162,7 @@
             android:layout_marginEnd="20dp"
             app:tint="?attr/splashTextColor"
             tools:ignore="ContentDescription" />
-        
+
         <TextView
             android:id="@+id/like_counts_tv"
             android:layout_width="wrap_content"
@@ -154,7 +174,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/montserrat_semibold"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
