--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
@@ -79,27 +79,23 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/blog_items" />
 
-<!--    <com.dinuscxj.progressbar.CircleProgressBar-->
-<!--        android:id="@+id/circularProgressBar"-->
-<!--        android:layout_width="50dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        app:progress_style="line"-->
-<!--        app:progress_stroke_width="1dp"-->
-<!--        app:progress_start_color="@android:color/holo_purple"-->
-<!--        app:progress_end_color="@android:color/holo_green_light"-->
-<!--        app:progress_background_color="@android:color/darker_gray"-->
-<!--        android:layout_below="@+id/search_blog"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        app:progress_start_degree="-90"-->
-<!--        app:progress_text_size="0dp"-->
-<!--        android:visibility="visible"-->
-<!--        app:drawBackgroundOutsideProgress="true"-->
-<!--        app:progress_shader="sweep"-->
-<!--        app:progress_stroke_cap="round"-->
-<!--        app:progress_blur_style="solid"-->
-<!--        app:progress_blur_radius="5dp"-->
-<!--        app:line_width="4dp"-->
-<!--        app:line_count="30" />-->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_blog_float_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:backgroundTint="@color/blue"
+        app:borderWidth="2dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        app:shapeAppearanceOverlay="@style/round"
+        android:layout_margin="32dp"
+        android:contentDescription="@string/add_blog_float_btn"
+        android:focusable="true"
+        android:backgroundTint="@color/blue"
+        app:fabSize="normal"
+        app:tint="@color/white"
+        tools:ignore="KeyboardInaccessibleWidget"
+        android:src="@drawable/add_icon_white"/>
 
 </RelativeLayout>
