--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/themes.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/themes.xml
@@ -5,4 +5,9 @@
         <item name="android:statusBarColor">@color/blue</item>"
     </style>
     <style name="Theme.BlogApp" parent="Base.Theme.BlogApp" />
+    <style name="round" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
+
+
 </resources>
