--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_forgot_password.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".register.LoginActivity">
+    tools:context=".register.ForgotPasswordActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -54,7 +54,7 @@
             android:textSize="38sp" />
 
         <EditText
-            android:id="@+id/login_mail_et"
+            android:id="@+id/reset_mail_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/with_us"
@@ -69,70 +69,17 @@
             android:textColor="?attr/splashTextColor"
             android:layout_marginTop="100dp" />
 
-        <EditText
-            android:id="@+id/login_password_et"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/login_mail_et"
-            android:layout_centerHorizontal="true"
-            android:hint="@string/enter_password_et"
-            android:background="@drawable/btn_background_stroke_red"
-            android:textSize="20sp"
-            android:inputType="textPassword"
-            android:fontFamily="@font/love_ya_like_a_sister"
-            android:gravity="center"
-            android:textColorHint="?attr/splashTextColor"
-            android:textColor="?attr/splashTextColor"
-            android:layout_marginTop="20dp" />
 
         <Button
-            android:id="@+id/login_btn"
+            android:id="@+id/reset_password_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/login_password_et"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:text="@string/login_btn_txt"
-            app:backgroundTint="@color/red"
-            android:background="@drawable/btn_background_stroke_red"
-            android:textSize="20sp"
-            android:fontFamily="@font/love_ya_like_a_sister"
-            android:textColor="?attr/splashTextColor" />
-
-        <TextView
-            android:id="@+id/forgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Forgot Password?"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/login_btn"
-            android:fontFamily="@font/love_ya_like_a_sister"
-            android:textColor="?attr/splashTextColor"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/new_here_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/new_here_txt"
-            android:layout_below="@id/login_btn"
+            android:layout_below="@id/reset_mail_et"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
-            android:fontFamily="@font/love_ya_like_a_sister"
-            android:textColor="?attr/splashTextColor"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/register_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/new_here_txt"
-            android:layout_centerHorizontal="true"
-            android:elevation="10dp"
-            android:text="@string/register_btn_txt"
-            app:backgroundTint="@null"
-            android:background="@drawable/btn_background_stroke_blue"
-            android:layout_marginTop="15dp"
+            android:text="@string/reset_password"
+            app:backgroundTint="@color/red"
+            android:background="@drawable/btn_background_stroke_red"
             android:textSize="20sp"
             android:fontFamily="@font/love_ya_like_a_sister"
             android:textColor="?attr/splashTextColor" />
@@ -142,10 +89,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/design_by"
-            android:layout_below="@id/register_btn"
+            android:layout_below="@id/reset_password_btn"
             android:textColor="?attr/splashTextColor"
             android:fontFamily="@font/love_ya_like_a_sister"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="150dp"
             android:textSize="17sp"
             android:layout_centerHorizontal="true" />
 
@@ -155,6 +102,7 @@
             android:layout_height="wrap_content"
             android:elevation="10dp"
             android:textSize="17sp"
+            android:layout_alignParentBottom="true"
             android:layout_below="@id/design_by"
             android:textColor="?attr/splashTextColor"
             android:layout_centerHorizontal="true"
@@ -170,7 +118,7 @@
             app:progress_start_color="@android:color/holo_purple"
             app:progress_end_color="@android:color/holo_green_light"
             app:progress_background_color="@android:color/darker_gray"
-            android:layout_below="@+id/login_password_et"
+            android:layout_below="@+id/reset_mail_et"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             app:progress_start_degree="-90"
