--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/attrs.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/attrs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="splashTextColor" format="color"/>
+    <attr name="iconColor" format="color"/>
 </resources>
