--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/colors.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="splash_text_color_dark">#000000</color>
     <color name="splash_text_color_light">#FFFFFF</color>
     <color name="date_color">#C8C8C8</color>
+    <color name="icon_color_light">#FF000000</color>
+    <color name="icon_color_dark">#FFFFFFFF</color>
 </resources>
