--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_read_more.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_read_more.xml
@@ -72,7 +72,7 @@
             <TextView
                 android:id="@+id/blogger_name_tv"
                 android:layout_width="110dp"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_below="@id/mainTitteHeadingTv"
                 android:layout_marginTop="15dp"
@@ -83,7 +83,7 @@
                 android:text="@string/user_name"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:maxLines="2"
+                android:maxLines="3"
                 android:gravity="center"/>
 
             <TextView
@@ -103,7 +103,7 @@
                 android:layout_width="345dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/date_tv"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="20dp"
                 app:dividerColor="@color/date_color"/>
@@ -115,7 +115,7 @@
                 android:layout_below="@id/blog_divider"
                 android:layout_marginStart="32dp"
                 android:text="@string/blog_description"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="50dp"
                 android:letterSpacing="0.03"
                 android:textColor="?attr/splashTextColor"
                 android:fontFamily="@font/montserrat_regular"
