--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/drawable/like_white_icon.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/drawable/like_white_icon.xml
@@ -9,6 +9,6 @@
       android:strokeWidth="2"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#ffffff"
+      android:strokeColor="?attr/splashTextColor"
       android:strokeLineCap="round"/>
 </vector>
