--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/search_blog"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp">
 
@@ -98,7 +98,9 @@
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="45dp"
         android:contentDescription="@string/add_blog_float_btn"
         android:src="@drawable/add_icon_white"
         app:backgroundTint="@color/blue"
